# gnome-shell-extension-gsconnect

./: meson.build
installed-tests/: meson.build  testBatteryPlugin.js  testClipboardPlugin.js  testContactsPlugin.js  testDevice.js  testFindmyphonePlugin.js  testLanBackend.js  testManager.js  testMousepadPlugin.js  testMprisPlugin.js  testNotificationPlugin.js  testPacket.js  testPhotoPlugin.js  testPingPlugin.js  testPlugin.js  testPresenterPlugin.js  testRuncommandPlugin.js  testSftpPlugin.js  testSharePlugin.js  testSmsPlugin.js  testSystemvolumePlugin.js  testTelephonyPlugin.js
installed-tests/fixtures/: backend.js  utils.js
installed-tests/fixtures/components/: mpris.js  upower.js
src/service/components/: notification.js
